--- a/RegEx.ipynb
+++ b/RegEx.ipynb
@@ -353,6 +353,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-5: color\n",
+      "Match 2 was found at 9-15: colour\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"color or colour\"\"\"\n",
+    "regex = 'colou?r' #Notice the . and ?. ? makes matching with a optional\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -361,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -524,36 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Matches the beginning of the input ^\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Match 1 was found at 0-3: win\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_str = \"\"\"winning takes talent, to repeat winning takes character\"\"\"\n",
-    "regex = '^win' #Notice the parenthesis. ookkee matches in same order\n",
-    "\n",
-    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
-    "for matchNum, match in enumerate(matches, start=1):\n",
-    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Matches the end of the input $"
+    "#### Matches the beginning of the input ^ (or \\A)\n"
    ]
   },
   {
@@ -565,13 +559,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Match 1 was found at 75-84: something\n"
+      "Match 1 was found at 0-3: win\n",
+      "Match 2 was found at 33-36: win\n"
      ]
     }
    ],
    "source": [
-    "test_str = \"\"\"something to think: The end is never the end. It's always the beginning of something\"\"\"\n",
+    "test_str = \"\"\"winning takes talent, to repeat \n",
+    "winning takes character\"\"\"\n",
+    "regex = '^win'\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-3: win\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"winning takes talent, to repeat \n",
+    "winning takes character\"\"\"\n",
+    "regex = '\\Awin'\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Matches the end of the input $ (or \\Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 6-15: something\n",
+      "Match 2 was found at 71-80: something\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"Think something\n",
+    "The end is never the end. It's always the beginning of something\"\"\"\n",
     "regex = 'something$' #Notice the parenthesis. ookkee matches in same order\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 71-80: something\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"Think something\n",
+    "The end is never the end. It's always the beginning of something\"\"\"\n",
+    "regex = 'something\\Z' #Notice the parenthesis. ookkee matches in same order\n",
     "\n",
     "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
     "for matchNum, match in enumerate(matches, start=1):\n",
@@ -587,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -809,8 +886,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -838,6 +917,185 @@
     "for matchNum, match in enumerate(matches, start=1):\n",
     "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Greedy vs Lazy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-44: Barack Obama, President of the united states\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"Barack Obama, President of the united states\"\"\"\n",
+    "regex = '.+,.+' # Greedy. Match as much as possible\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-14: Barack Obama, \n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"Barack Obama, President of the united states\"\"\"\n",
+    "regex = '.+?,.+?' # Lazy. Match as less as possible\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouping meta characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-9: dependent\n",
+      "Match 2 was found at 13-24: independent\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"dependent vs independent\"\"\"\n",
+    "regex = '(in)?dependent'\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 0-5: apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"apple snapple\"\"\"\n",
+    "regex = '\\Aapple'\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word boundary \\b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match 1 was found at 8-9: a\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_str = \"\"\"this is a car\"\"\"\n",
+    "regex = r'\\ba\\b' # find a which has before and after word boundary\n",
+    "\n",
+    "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
+    "for matchNum, match in enumerate(matches, start=1):\n",
+    "    print (\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum = matchNum, start = match.start(), end = match.end(), match = match.group()))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lookarounds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ?=\tPositive Lookahead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Yet to code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
